--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-htmlbars": "^3.0.1",
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-markdown-to-json": "^0.2.1",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
@@ -46,6 +47,7 @@
     "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.4.1",
+    "ember-require-module": "^0.3.0",
     "ember-resolver": "^5.0.1",
     "ember-source": "~3.12.0",
     "ember-welcome-page": "^4.0.0",
@@ -57,5 +59,8 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
+  },
+  "dependencies": {
+    "md-2-json": "^1.0.6"
   }
 }
